# VoidSyntax

./: Cargo.toml  README.md
frontend/src/app/: page.tsx
frontend/src/app/homepage/: page.tsx  video.tsx
frontend/src/app/image/: page.tsx
frontend/src/app/login/: login.tsx  page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/watch/: bar.tsx  page.tsx  video.tsx  video_player.tsx  video_player2.tsx
src/: main.rs  structs.rs
