[package]
name = "VoidSyntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.4", features = ["multipart"]}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"

tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["codec", "io"] }
tower-http = { version = "0.5.1", features = ["full"] }
futures = "0.3.3"
hyper = { version = "0.14", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

jsonwebtoken = "9.3"

names = { version = "0.14.0", default-features = false }

rand = "0.8.5"
